Add edit for discord_invite_url, and add discord_client_id
Client ID is for possible future sending via Discord GMCP messages

--- a/lib/web/templates/admin/config/index.html.eex
+++ b/lib/web/templates/admin/config/index.html.eex
@@ -80,6 +80,20 @@
                   <%= link("Edit", to: config_path(@conn, :edit, "character_names"), class: "btn btn-default btn-xs") %>
                 </td>
               </tr>
+              <tr>
+                <th>Discord Client ID</th>
+                <td><%= Config.discord_client_id() %></td>
+                <td>
+                  <%= link("Edit", to: config_path(@conn, :edit, "discord_client_id"), class: "btn btn-default btn-xs") %>
+                </td>
+              </tr>
+              <tr>
+                <th>Discord Invite URL</th>
+                <td><%= Config.discord_invite_url() %></td>
+                <td>
+                  <%= link("Edit", to: config_path(@conn, :edit, "discord_invite_url"), class: "btn btn-default btn-xs") %>
+                </td>
+              </tr>
             </tbody>
           </table>
         </div>
