Hook up local channels to gossip, sending only

--- a/lib/web/templates/admin/channel/_form.html.eex
+++ b/lib/web/templates/admin/channel/_form.html.eex
@@ -18,6 +18,14 @@
           <%= error_tag f, :color %>
         </div>
       </div>
+
+      <%= FormView.checkbox_field(f, :is_gossip_connected, label: "Is Connected to the Gossip Network?") do %>
+        <span class="help-block"><%= Help.get("channel.is_gossip_connected") %></span>
+      <% end %>
+
+      <%= FormView.text_field(f, :gossip_channel) do %>
+        <span class="help-block"><%= Help.get("channel.gossip_channel") %></span>
+      <% end %>
     </div>
 
     <div class="box-footer">
