--- a/lib/web/templates/admin/feature/show.html.eex
+++ b/lib/web/templates/admin/feature/show.html.eex
@@ -22,6 +22,7 @@
           <h3 class="box-title">Attributes</h3>
           <div class="box-tools">
             <%= link("Edit", to: feature_path(@conn, :edit, @feature.id), class: "btn btn-primary") %>
+            <%= link("Delete", to: "#", class: "btn btn-danger", data: [toggle: "modal", target: "#delete-confirm"]) %>
           </div>
         </div>
         <div class="box-body">
@@ -50,3 +51,21 @@
     </div>
   </div>
 </section>
+
+<div id="delete-confirm" class="modal">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title">Are you sure?</h4>
+      </div>
+      <div class="modal-body">
+        <p>Deleting a feature will remove it from <em>all</em> rooms that it is attached to.</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+        <%= link("Yes, Delete", to: feature_path(@conn, :delete, @feature.id), method: :delete, class: "btn btn-danger") %>
+      </div>
+    </div>
+  </div>
+</div>
