--- a/lib/web/templates/admin/feature/index.html.eex
+++ b/lib/web/templates/admin/feature/index.html.eex
@@ -15,7 +15,7 @@
 
 <section class="content">
   <div class="row">
-    <div class="col-md-12">
+    <div class="col-md-9">
       <div class="box box-primary">
         <div class="box-header">
           <div class="box-tools">
@@ -49,6 +49,28 @@
 
           <%= SharedView.pagination(path: feature_path(@conn, :index), pagination: @pagination, name: "features") %>
         </div>
+      </div>
+    </div>
+
+    <div class="col-md-3">
+      <div class="box">
+        <div class="box-header">
+          <h3 class="box-title">Filter</h3>
+        </div>
+
+        <%= form_tag(feature_path(@conn, :index), method: :get)do %>
+          <div class="box-body">
+            <div class="form-group">
+              <%= label :feature, :key %>
+              <%= text_input :feature, :key, value: @filter["key"], class: "form-control" %>
+            </div>
+          </div>
+
+          <div class="box-footer">
+            <%= submit "Filter", class: "btn btn-primary" %>
+            <%= link "Clear", to: feature_path(@conn, :index), class: "btn" %>
+          </div>
+        <% end %>
       </div>
     </div>
   </div>
