--- a/lib/web/templates/admin/room/show.html.eex
+++ b/lib/web/templates/admin/room/show.html.eex
@@ -181,6 +181,51 @@
     <div class="col-md-12">
       <div class="box">
         <div class="box-header">
+          <h3 class="box-title">Global Features</h3>
+
+          <i class="fa fa-question-circle" data-toggle="tooltip" title="<%= Help.get("room.feature") %>"></i>
+
+          <div class="box-tools">
+            <%= link("Add Feature", to: room_global_feature_path(@conn, :new, @room.id), class: "btn btn-primary") %>
+          </div>
+        </div>
+
+        <div class="box-body">
+          <table class="table">
+            <thead>
+              <tr>
+                <th>Key</th>
+                <th>Short Description</th>
+                <th>Description</th>
+                <th>Listen</th>
+                <th>Actions</th>
+              </tr>
+            </thead>
+            <tbody>
+              <%= Enum.map(Features.features(@room.feature_ids), fn (feature) -> %>
+                <tr>
+                  <td><%= feature.key %></td>
+                  <td><%= feature.short_description %></td>
+                  <td><%= feature.description %></td>
+                  <td><%= feature.listen %></td>
+                  <td>
+                    <%= link(to: room_global_feature_path(@conn, :delete, @room.id, feature.id), method: :delete, class: "btn btn-warning btn-xs") do %>
+                      <i class="fa fa-times"></i>
+                    <% end %>
+                  </td>
+                </tr>
+              <% end) %>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-12">
+      <div class="box">
+        <div class="box-header">
           <h3 class="box-title">Notes</h3>
         </div>
         <div class="box-body">
