--- a/assets/play/css/app.scss
+++ b/assets/play/css/app.scss
@@ -213,8 +213,12 @@ body {
 }
 
 pre {
-  font-size: 1em;
+  font-size: 0.9rem;
   white-space: pre-wrap;
+
+  @media only screen and (min-device-width: 1900px) {
+    font-size: 1rem;
+  }
 
   code {
     font-family: "Lucida Console", Monaco, monospace;
