--- a/lib/web/templates/admin/item/_form.html.eex
+++ b/lib/web/templates/admin/item/_form.html.eex
@@ -16,7 +16,9 @@
 
       <%= FormView.text_field(f, :name) %>
 
-      <%= FormView.textarea_field(f, :description) %>
+      <%= FormView.textarea_field(f, :description) do %>
+        <span class="help-block"><%= Help.get("format.resources") %></span>
+      <% end %>
 
       <%= FormView.text_field(f, :tags, value: @changeset |> tags()) %>
 
