Start adding pagination to the top of index pages

--- a/lib/web/templates/admin/npc/index.html.eex
+++ b/lib/web/templates/admin/npc/index.html.eex
@@ -23,6 +23,8 @@
           </div>
         </div>
         <div class="box-body">
+          <%= SharedView.pagination(path: npc_path(@conn, :index), pagination: @pagination, name: "npcs") %>
+
           <div class="table-responsive">
             <table class="table">
               <thead>
