--- a/lib/web/templates/admin/user/index.html.eex
+++ b/lib/web/templates/admin/user/index.html.eex
@@ -9,6 +9,8 @@
     <div class="col-md-9">
       <div class="box box-primary">
         <div class="box-body">
+          <%= SharedView.pagination(path: user_path(@conn, :index), pagination: @pagination, name: "users") %>
+
           <div class="table-responsive">
             <table class="table">
               <thead>
