--- a/lib/web/templates/admin/announcement/index.html.eex
+++ b/lib/web/templates/admin/announcement/index.html.eex
@@ -30,9 +30,9 @@
                 <tr>
                   <th>ID</th>
                   <th>Title</th>
-                  <td>Is Published?</th>
-                  <td>Is Sticky?</th>
-                  <td>Date</th>
+                  <th>Is Published?</th>
+                  <th>Is Sticky?</th>
+                  <th>Date</th>
                   <th>Actions</th>
                 </tr>
               </thead>
