--- a/lib/web/templates/admin/npc/index.html.eex
+++ b/lib/web/templates/admin/npc/index.html.eex
@@ -18,6 +18,7 @@
     <div class="col-md-9">
       <div class="box box-primary">
         <div class="box-header">
+          <h3 class="box-title"></h3>
           <div class="box-tools">
             <%= link("New NPC", to: npc_path(@conn, :new), class: "btn btn-primary") %>
           </div>
