--- a/lib/web/templates/admin/quest/_form.html.eex
+++ b/lib/web/templates/admin/quest/_form.html.eex
@@ -38,7 +38,7 @@
         <span class="help-block"><%= Help.get("format.resources") %></span>
       <% end %>
 
-      <%= React.react_component("Components.Script.Editor", name: "quest[script]", lines: @changeset |> script()) %>
+      <%= React.react_component("Components.Script.Editor", name: "quest[script]", lines: @changeset |> script(), quest: true) %>
     </div>
 
     <div class="box-footer">
