Add tags to global features
Help distinguishing them in a list

--- a/lib/web/templates/admin/feature/index.html.eex
+++ b/lib/web/templates/admin/feature/index.html.eex
@@ -27,6 +27,7 @@
             <table class="table">
               <thead>
                 <tr>
+                  <th>Tags</th>
                   <th>Key</th>
                   <th>Short Description</th>
                   <th>Actions</th>
@@ -35,6 +36,7 @@
               <tbody>
                 <%= Enum.map @features, fn (feature) -> %>
                   <tr>
+                    <td><%= Enum.join(feature.tags, ", ") %></td>
                     <td><%= link(feature.key, to: feature_path(@conn, :show, feature.id)) %></td>
                     <td><%= feature.short_description %>
                     <td>
