--- a/lib/web/templates/admin/feature/_form.html.eex
+++ b/lib/web/templates/admin/feature/_form.html.eex
@@ -1,6 +1,8 @@
 <div class="box box-primary">
   <%= form_for @changeset, @path, [class: "form-horizontal"], fn (f) -> %>
     <div class="box-body">
+      <%= FormView.text_field(f, :tags, value: @changeset |> tags()) %>
+
       <%= FormView.text_field(f, :key) do %>
         <span class="help-block"><%= Help.get("room_feature.key") %></span>
       <% end %>
