Parse custom item commands to use them
Add in `parse/2` basic implementations to commands that don't use the
macro.

--- a/lib/web/templates/admin/item/_form.html.eex
+++ b/lib/web/templates/admin/item/_form.html.eex
@@ -36,7 +36,7 @@
       <% end %> 
 
       <%= FormView.text_field(f, :usage_command) do %>
-        <span class="help-block">This is what the user will enter to trigger using the item. Valid for weapons only.</span>
+        <span class="help-block">This is what the user will enter to trigger using the item. If empty defaults to <code>use</code>.</span>
       <% end %>
 
       <%= FormView.text_field(f, :user_text) do %>
