--- a/lib/web/templates/play/show.html.eex
+++ b/lib/web/templates/play/show.html.eex
@@ -65,6 +65,58 @@
   </div>
 </div>
 <div class="prompt">
+  <div class="action-bar">
+    <div class="button tooltip" data-title="Magic Missile">
+      <div class="container">
+        MM
+      </div>
+    </div>
+    <div class="button tooltip" data-title="Frost Ray">
+      <div class="container">
+        FR
+      </div>
+    </div>
+    <div class="button">
+      <div class="container">
+        &nbsp;
+      </div>
+    </div>
+    <div class="button">
+      <div class="container">
+        &nbsp;
+      </div>
+    </div>
+    <div class="button">
+      <div class="container">
+        &nbsp;
+      </div>
+    </div>
+    <div class="button">
+      <div class="container">
+        &nbsp;
+      </div>
+    </div>
+    <div class="button">
+      <div class="container">
+        &nbsp;
+      </div>
+    </div>
+    <div class="button">
+      <div class="container">
+        &nbsp;
+      </div>
+    </div>
+    <div class="button">
+      <div class="container">
+        &nbsp;
+      </div>
+    </div>
+    <div class="button">
+      <div class="container">
+        &nbsp;
+      </div>
+    </div>
+  </div>
   <div class="stats">
     <div class="stat-block tooltip" id="health" data-title="Health Points">
       <div class="percentage"></div>
