--- a/assets/play/css/app.scss
+++ b/assets/play/css/app.scss
@@ -144,6 +144,7 @@ body {
     padding-right: 3px;
     box-sizing: content-box;
     height: calc(100% - 48px);
+    width: 100%;
 
     pre {
       margin: 0;
